Refactoring in progress to use pyapnea instead of internal code...

--- a/.gitignore
+++ b/.gitignore
@@ -127,4 +127,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-/oscar_tools/.$oscar_format.drawio.bkp
+/_deprecated/oscar_tools/.$oscar_format.drawio.bkp
