Configuration and data pipeline refactoring (in progress...)

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -2,6 +2,8 @@ defaults:
   - data: default
   - logs/local/default
   - logs/logger/mlflow
+  - training/default
+  - training/split/default
   - _self_
 
 hydra:
