--- a/conf/data-pipeline-rolling.yaml
+++ b/conf/data-pipeline-rolling.yaml
@@ -1,7 +1,7 @@
 defaults:
   - global/logs/local/default
   - global/logs/logger/mlflow
-  - pipeline/data/dataset: default
+  - pipeline/data/dataset: dataframe
   - pipeline/data/tasks: generate_all_rolling_window
   - _self_
 
