--- a/test/conf/data-pipeline.yaml
+++ b/test/conf/data-pipeline.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - pipeline/data/dataset: default
+  - pipeline/data/dataset: dataframe
   - pipeline/data/tasks: generate_all_rolling_window
   - _self_
 
