Development of balancing a split dataset (in progress, see test_task_split_to_balanced())

--- a/test/conf/data-pipeline-split.yaml
+++ b/test/conf/data-pipeline-split.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - pipeline/data/dataset: dataframe
+  - pipeline/data/dataset: numpy
   - pipeline/data/tasks: generate_split_dataset
   - _self_
 
