--- a/conf/pipeline/data/tasks/generate_split_dataset.yaml
+++ b/conf/pipeline/data/tasks/generate_split_dataset.yaml
@@ -1,5 +1,5 @@
 task_func:
-  _target_: src.data.preparation_tasks.task_split_dataset
+  _target_: src.data.preparation_tasks.task_generate_split_dataset
   oscar_dataset: ??
   output_dir_path: ??
   train_ratio: 0.8
