--- a/conf/data-pipeline-balancing.yaml
+++ b/conf/data-pipeline-balancing.yaml
@@ -1,7 +1,7 @@
 defaults:
   - global/logs/local/default
   - global/logs/logger/mlflow
-  - pipeline/data/dataset: dataframe
+  - pipeline/data/dataset: numpy
   - pipeline/data/tasks: generate_balanced_dataset
   - _self_
 
