testing zip functionalities for future integration in ProcessedDataset

--- a/conf/pipeline/data/tasks/generate_all_rolling_window.yaml
+++ b/conf/pipeline/data/tasks/generate_all_rolling_window.yaml
@@ -2,5 +2,6 @@ task_func:
   _target_: src.data.preparation_tasks.task_generate_all_rolling_window
   length: 500
   keep_last_incomplete: false
+  compression_format: zip
   oscar_dataset: ??
   output_dir_path: ??
