--- a/test/conf/data-pipeline-balancing.yaml
+++ b/test/conf/data-pipeline-balancing.yaml
@@ -1,6 +1,7 @@
 defaults:
   - pipeline/data/dataset: numpy
   - pipeline/data/tasks: generate_balanced_dataset
+  - pipeline/options/compression: default
   - _self_
 
 hydra:
