--- a/conf/data-pipeline-split.yaml
+++ b/conf/data-pipeline-split.yaml
@@ -3,6 +3,7 @@ defaults:
   - global/logs/logger/mlflow
   - pipeline/data/dataset: numpy
   - pipeline/data/tasks: generate_split_dataset
+  - pipeline/options/compression: default
   - _self_
 
 hydra:
