--- a/test/conf/data-pipeline-pickle.yaml
+++ b/test/conf/data-pipeline-pickle.yaml
@@ -1,6 +1,7 @@
 defaults:
   - pipeline/data/dataset: numpy
   - pipeline/data/tasks: generate_pickle_dataset
+  - pipeline/options/compression: default
   - _self_
 
 hydra:
