--- a/test/conf/data-pipeline-split.yaml
+++ b/test/conf/data-pipeline-split.yaml
@@ -1,6 +1,7 @@
 defaults:
   - pipeline/data/dataset: numpy
   - pipeline/data/tasks: generate_split_dataset
+  - pipeline/options/compression: default
   - _self_
 
 hydra:
